# powerplant-coding-challenge

./: .pre-commit-config.yaml  Makefile  README.md  README_ORIGINAL.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  main.py  production_plan.py  requirements.txt
api/tests/: test_production_plan.py
